--- a/week5/week5.html
+++ b/week5/week5.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 5- Midterm Pitch</title>
-    <script src="https://picsum.photos/400"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="week5 .css">
+
 </head>
+
 <body>
     <h1>Random Image Generator</h1>
-    
-    <div id="randomimage">Random Image</div>
+
+    <div>Random Image</div>
+    <button id="randomimage">Click Here for random Image</button>
+    <script src="week5.js"></script>
 </body>
+
 </html>
