--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <section><h2></h2></section>
     <header>
         <div class="container">
             <div id="back"><a href="index.html">Andrew Lah- Web Production 2</a></div>
@@ -29,8 +30,7 @@
 
     <p id="intro">Welcome to my page. My name is Andrew Lah and I am a junior at CUNY Hunter College. Outside of school I love to
         bike, rock climb,
-        take photos, and gym. Through this course, I would like to learn how to build an online store where I can sell
-        clothing.
+        take photos, and gym. On this page, you will see what I develop throughout the semester in Web Production 2. Through this course, I am hoping to be more confident in my web developing skills and learn more about javascript. 
     <p>
     <img id="me" src="img/me.jpg">
 
