--- a/week5/week5.html
+++ b/week5/week5.html
@@ -7,15 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 5- Midterm Pitch</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="week5 .css">
+    <link rel="stylesheet" href="week5.css">
 
 </head>
 
 <body>
+
     <h1>Random Image Generator</h1>
 
-    <div>Random Image</div>
-    <button id="randomimage">Click Here for random Image</button>
+    <button id="click-me">Click Here for random Image</button>
+    <p id="result"></p>
+
     <script src="week5.js"></script>
 </body>
 
