--- a/week5/week5.html
+++ b/week5/week5.html
@@ -15,7 +15,7 @@
 
     <h1>Random Image Generator</h1>
 
-    <button id="click-me">Click Here for random Image</button>
+    <button id="click-me">Click Here for Random Image</button>
     <p id="result"></p>
 
     <script src="week5.js"></script>
