--- a/week6/week6.html
+++ b/week6/week6.html
@@ -12,26 +12,27 @@
 </head>
 
 <body>
-    
+
     <h1>Image Gallery</h1>
     <center>
-    <button id="disappear">
-        Make me disappear
-    </button>
-    <button id="reappear">
-        Make me reappear
-    </button>
-    <button id="grey">
-        Turn me Grey
-    </button>
-    <button id="shuffle">
-        Shuffle Image
-    </button>
-    <button id="save">
-        Save Image
-    </button>
+        <button id="disappear">
+            Make me disappear
+        </button>
+        <button id="reappear">
+            Make me reappear
+        </button>
+        <button id="grey">
+            Turn me Grey
+        </button>
+        <button id="shuffle">
+            Shuffle Image
+        </button>
+        <button id="save">
+            Save Image
+        </button>
 
-    <img id="img" src="https://picsum.photos/800"></center>
+        <img id="img" src="https://picsum.photos/800">
+    </center>
 
     <script>
         $("#disappear").click(function () {
@@ -49,9 +50,10 @@
             });
         });
 
-        $("#shuffle").click(function () {
-            $("#img").fadeIn("slow", function () {
-            });
+        $('#shuffle').on({
+            'click': function () {
+                $('#img').attr('src', 'https://picsum.photos/800');
+            }
         });
 
         $("#save").click(function () {
