--- a/week6/week6.html
+++ b/week6/week6.html
@@ -53,6 +53,14 @@
 
     <center><img id="img" src="https://picsum.photos/800"></center>
 
+    <hr class="divider">
+    
+    <footer class="container">
+        <div><a id="floatleft" href="#">Back to top</a><br>
+        <p>&copy; MEDP 331- Web Production 2</p></div>
+        <div id="footercontact"><p>Andrew Lah</p>
+        <p>andrew.lah76@myhunter.cuny.edu</p></div>
+      </footer>
     <script>
         const refreshButton = document.querySelector('.shuffle');
 
