--- a/week6/week6.html
+++ b/week6/week6.html
@@ -55,12 +55,13 @@
 
     <hr class="divider">
     
-    <footer class="container">
-        <div><a id="floatleft" href="#">Back to top</a><br>
-        <p>&copy; MEDP 331- Web Production 2</p></div>
-        <div id="footercontact"><p>Andrew Lah</p>
-        <p>andrew.lah76@myhunter.cuny.edu</p></div>
+    <footer class="footer">
+        <a href="#">Back to top</a>
+        <p>&copy; MEDP 331- Web Production 2</p>
+        <p>Andrew Lah</p>
+        <p>andrew.lah76@myhunter.cuny.edu</p>
       </footer>
+
     <script>
         const refreshButton = document.querySelector('.shuffle');
 
