--- a/week6.html
+++ b/week6.html
@@ -37,18 +37,17 @@
         <div>
             <h2>Why use this site?</h2>
             <ul>
-                <li><h3>Simple & Easy to use</h3></li>
-                <li><h3>High Definition</h3></li>
-                <li><h3>Free</h3></li>
+                <li>Simple & Easy to use</li>
+                <li>High Definition</li>
+                <li>Free</li>
             </ul>
         </div>
         <div>
             <h2>Directions</h2>
-            <h3>Step 1- Shuffle through the image gallery.</h3>
-            <h3>Step 2- Find a desirable image.</h3>
-            <h3>Step 3- Use the "Turn me grey" button to choose <br>
-                between a grey or colored image.</h3>
-            <h3>Step 4- Save Image!!</h3>
+            <h3>Step 1-</h3>
+            <h3>Step 2-</h3>
+            <h3>Step 3-</h3>
+            <h3>Step 4-</h3>
         </div>
     </div>
 
