--- a/week6/week6.html
+++ b/week6/week6.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 6- Midterm Pitch</title>
+    <title>Random Image Generator</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 
@@ -89,7 +89,6 @@
 
 
         const refreshPage = () => {
-            //location.reload();
             document.getElementById("img").src = "https://picsum.photos/seed/"+Math.random()+"/800/800";
         }
 
@@ -127,8 +126,9 @@
             }
             xhr.send();
         }
+        //jquery function
         $("#save").click(function () {
-            Download(document.getElementById("img").src,"download.jpg");
+            Download(document.getElementById("img").src,"desirableimage.jpg");
             
         });
 
