--- a/MEDP285/index.html
+++ b/MEDP285/index.html
@@ -138,7 +138,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="img/postmalone1.jpg">
+        <img src="img/MIDTERM/postmalone.jpg">
         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
         <div class="container">
           <div class="carousel-caption text-start">
@@ -149,7 +149,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="img/valorant.jpg">
+        <img src="img/MIDTERM/valorant.jpg">
         <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
 
         <div class="container">
