--- a/week9/week9.html
+++ b/week9/week9.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>student site</title>
+    <style>
+        body{
+  background-color: #eea489;
+  color: #2f96a8;
+  -webkit-text-stroke: 1px #236a77;
+  font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+}
+    </style>
 </head>
 <body>
     <h1>Clothing Database</h1>
