--- a/week9/week9.html
+++ b/week9/week9.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>student site</title>
+    <title>Clothing Database Input</title>
     <style>
         body{
   background-color: #eea489;
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-    <h1>Clothing Database</h1>
+    <h1>Clothing Database Input</h1>
     <form action='connect.php' method="post">
         <label for="ID">ID</label>
         <input type='text' name="ID" id="ID" required>
