uploading final files

--- a/week9/week9.html
+++ b/week9/week9.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <h1>Clothing Database Input</h1>
-    <form action='connect.php' method="post">
+    <form action='index.php' method="post">
         <label for="ID">ID</label>
         <input type='text' name="ID" id="ID" required>
         <br>
