--- a/final/final.html
+++ b/final/final.html
@@ -92,17 +92,17 @@
         <div id="savecount">SAVED: 0</div>
       </div>
 
-    <hr class="divider">
+    <hr class="divider"><br>
 
-<center><h2>About us</h2></center>
-
-<div id="aboutus"><center>
-Sometimes a person doesn't know what they're looking for. <br>
-This site can help you with that! <br>
-This site aims to deliver the perfect image to you without 
-the use of <br> too many buttons.</center>
+<div id="mission"><center>
+    <center><h2>Our Mission</h2></center>
+Sometimes a person doesn't know what they're looking for.
+This site can help you with that!
+This site aims to deliver the perfect image to you using the least amount of buttons. <br> <br>
+<div id="takesurvey">
+Loved the image generator? Please tell us in the Image Survey!</div></center>
 </div>
-<br><br><a id="survey" href="survey.html">IMAGE SURVEY</a>
+<br><br><a id="survey" href="survey.html">Take the Image Survey</a>
 
     <hr class="divider">
 <!--Footer-->
