--- a/final/survey.html
+++ b/final/survey.html
@@ -19,8 +19,9 @@
     <div class="gallery-container">
 
     </div>
-
+<div id="entireform">
     <h2>Please give us feedback on our site!</h2>
+
     <form action='index.php' method="post">
 
         <label for="like">How many images do you like?</label>
@@ -50,6 +51,7 @@
 
         <input type='submit' name='submit' id="submit">
     </form>
+</div>
     <hr class="divider">
     <!--Footer-->
     <footer class="footer">
