--- a/final/survey.html
+++ b/final/survey.html
@@ -16,22 +16,21 @@
     <h1>Image Survey</h1>
     <center><button class="displayBtn">Display Images</button></center>
 
-    <div class="gallery-container">
-
-    </div>
-<div id="entireform">
+    <div class="gallery-container"></div>
+    
+<div>
     <h2>Please give us feedback on our site!</h2>
 
     <form action='index.php' method="post">
 
-        <label for="like">How many images do you like?</label>
+        <label for="lik">How many images do you like?</label>
         <br>
-        <input type='text' name="like" id="like" required>
+        <input type='text' name="lik" id="lik" required>
         <br>
 
-        <label for="save">How many images would you save?</label>
+        <label for="sav">How many images would you save?</label>
         <br>
-        <input type='text' name="save" id="save" required>
+        <input type='text' name="sav" id="sav" required>
         <br>
 
         <label for="for">What would you use the saved images for?</label>
