--- a/final/final.html
+++ b/final/final.html
@@ -100,9 +100,11 @@ Sometimes a person doesn't know what they're looking for.
 This site can help you with that!
 This site aims to deliver the perfect image to you using the least amount of buttons. <br> <br>
 <div id="takesurvey">
-Loved the image generator? Please tell us in the Image Survey!</div></center><br>
+    <a id="survey" href="survey.html">Image Survey</a><br><br>
+Loved the image generator? Please tell us in the Image Survey!
+
+</div></center><br>
 </div>
-<br><br><a id="survey" href="survey.html">Take the Image Survey</a>
 
     <hr class="divider">
 <!--Footer-->
