--- a/final/survey.html
+++ b/final/survey.html
@@ -22,7 +22,7 @@
 <div class="form-container d-none">
     <h2>Please give us feedback on our site!</h2>
 
-    <form action='index.php' method="post">
+    <form action='connect.php' method="post">
 
         <label for="lik">How many images do you like?</label>
         <br>
