--- a/final/final.html
+++ b/final/final.html
@@ -14,6 +14,7 @@
 
 </head>
 
+<body>
 <!--referenced from w3schools-->
 <div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
